--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "bootstrap": "^4.1.3",
+    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "underscore": "^1.9.1"
