--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 GOOGLE_AUTH_CLIENT_ID=changeme
 GOOGLE_AUTH_SECRET=changeme
+SLACK_CLIENT_ID=changeme
+SLACK_CLIENT_SECRET=changeme
 SECRET_KEY_BASE=changeme
