--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "text_standup",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^4.0.7",
     "backbone": "^1.3.3",
     "bootstrap": "^4.1.3",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.7.1"
   }
 }
