--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "text_standup",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "backbone": "^1.3.3",
     "bootstrap": "^4.1.3",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react_ujs": "^2.5.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
